change index html by fei.kong

--- a/static/publish.html
+++ b/static/publish.html
@@ -55,7 +55,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul>
 						<li  ><a href="index.html" >主页  </a><label>- </label> </li>
 						<li><a href="location.html" > 全部信息</a><label>- </label></li>
-						<li><a href="specials.html">发布信息 </a></li>
+						<li><a href="publish.html">发布信息 </a></li>
 					</ul>
 					<!--script-->
 				<script>
@@ -133,9 +133,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"> </div>
 		</div>	
 	</div>
-
-				<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-
-
+	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 </body>
 </html>
