--- a/static/index.html
+++ b/static/index.html
@@ -32,7 +32,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 <body>
 	<!--header-->
-	<!--header-->
 	<div class="header-in">
 		<div class="container">
 			<div class="logo">
@@ -89,7 +88,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h5><a href="single.html">烤肉大餐——天府一街</a></h5>
 						<p>10XEM</p>
 						<div class="details-in">
-							<a href="#" class="details">详细</a>
+							<a href="single.html" class="details">详细</a>
 						</div>
 					</div>
 					<div class="col-md-3 special-in">
