--- a/static/detail.html
+++ b/static/detail.html
@@ -35,23 +35,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="header-in">
 		<div class="container">
 			<div class="logo">
-				<h1><a href="index.html">Food Shop</a></h1>
+				<h1><a href="index.html">有 饭</a></h1>
 			</div>
 			<div class="header-top">
 				<div class="header-top-in">
 					<ul class="header-grid">
-						<li ><a href="account.html">My Account   </a> <label>/</label></li>
-						<li ><a href="login.html">  Login </a> </li>		
 					</ul>
 					<div class="act">
-						<a href="#" class="done">Donec actortor </a>
 					</div>
 				<div class="clearfix"> </div>
 				</div>
 				<ul class="grid-header">
-					<li><a href="account.html">My Account</a> <label>/</label></li>
-					<li><a href="#">My Cart</a> <label>/</label></li>
-					<li><a href="checkout.html">  Checkout </a> </li>		
 				</ul>
 				<div class="clearfix"> </div>
 			</div>
@@ -60,11 +54,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="top-nav">
 					<span class="menu"> </span>
 					<ul>
-						<li  ><a href="index.html" >Home  </a><label>- </label> </li>
-						<li><a href="location.html" > Locations</a><label>- </label></li>
-						<li><a href="specials.html">Specials </a><label>- </label></li>
-						<li><a href="404.html" > Order Online</a><label>- </label></li>
-						<li><a href="contact.html">Contacts</a></li>
+						<li  ><a href="index.html" >主页  </a><label>- </label> </li>
+						<li><a href="location.html" > 全部信息</a><label>- </label></li>
+						<li><a href="publish.html">发布信息 </a></li>
 					</ul>
 					<!--script-->
 				<script>
@@ -83,8 +75,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"> </div>
 		</div>
 		<!---->
-		
-
 		</div>
 	</div>
 	<!---->
