--- a/static/account.html
+++ b/static/account.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Home</title>
+<title>Detail</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -35,23 +35,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="header-in">
 		<div class="container">
 			<div class="logo">
-				<h1><a href="index.html">Food Shop</a></h1>
+				<h1><a href="index.html">有 饭</a></h1>
 			</div>
 			<div class="header-top">
 				<div class="header-top-in">
 					<ul class="header-grid">
-						<li ><a href="account.html">My Account   </a> <label>/</label></li>
-						<li ><a href="login.html">  Login </a> </li>		
 					</ul>
 					<div class="act">
-						<a href="#" class="done">Donec actortor </a>
 					</div>
 				<div class="clearfix"> </div>
 				</div>
 				<ul class="grid-header">
-					<li><a href="account.html">My Account</a> <label>/</label></li>
-					<li><a href="#">My Cart</a> <label>/</label></li>
-					<li><a href="checkout.html">  Checkout </a> </li>		
 				</ul>
 				<div class="clearfix"> </div>
 			</div>
@@ -60,11 +54,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="top-nav">
 					<span class="menu"> </span>
 					<ul>
-						<li  ><a href="index.html" >Home  </a><label>- </label> </li>
-						<li><a href="location.html" > Locations</a><label>- </label></li>
-						<li><a href="specials.html">Specials </a><label>- </label></li>
-						<li><a href="404.html" > Order Online</a><label>- </label></li>
-						<li><a href="contact.html">Contacts</a></li>
+						<li  ><a href="index.html" >主页  </a><label>- </label> </li>
+						<li><a href="location.html" > 全部信息</a><label>- </label></li>
+						<li><a href="publish.html">发布信息 </a></li>
 					</ul>
 					<!--script-->
 				<script>
@@ -88,25 +80,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!---->
 	<div class="container">
 		<div class="account">
-		<h2>Account</h2>
+		<h2>用户信息</h2>
 			<form>
 			<div>
-				<span>First Name</span>
+				<div><span>钱包地址</span></div>
 				<input type="text">
 			</div> 	
 			<div>			
-				<span class="name-in">Last Name</span>
+				<div><span class="name-in">姓  名</span></div>
 				<input type="text"> 
 			</div>			
-			<div> 	
-				<span class="mail">Email</span>
+			<div>
+				<div><span class="mail">身份证号</span></div>
 				<input type="text"> 
 			</div>
 			<div> 
-				<span class="word">Password</span>
+				<div><span class="word">手机号</span></div>
 				<input type="password">
 			</div>				
-				<input type="submit" value="Login"> 
+				<input type="submit" value="提交"> 
 			</form>
 		</div>
 	
@@ -116,14 +108,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="footer">
 		<div class="container">
 		<div class="col-md-8 footer-bottom ">
-		<h4>Aenean condimentum suscipit dolor</h4>
-		<p>Proin ullamcorper urna quis velit mollis molestie suscipit nisl consectetur
-uspendisse venenatis dolor et nunc iaculis ege</p>
-		<p class="footer-grid">Copyright &copy; 2015.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+		<h4>说明</h4>
+		<p>****</p>
 
 		</div>
 			<div class="col-md-4 footer-bottom ">
-				<h4>Muscipit dolor</h4>
+				<h4>分享</h4>
 				<ul class="social-icons">
 					<li><a href="#"><span> </span> </a></li>
 					<li class="tin"><a href="#"><span> </span></a></li>
@@ -133,23 +123,7 @@ uspendisse venenatis dolor et nunc iaculis ege</p>
 				<div class="clearfix"> </div>
 		</div>	
 	</div>
-	 <script type="text/javascript">
-						$(document).ready(function() {
-							/*
-							var defaults = {
-					  			containerID: 'toTop', // fading element id
-								containerHoverID: 'toTopHover', // fading element hover id
-								scrollSpeed: 1200,
-								easingType: 'linear' 
-					 		};
-							*/
-							
-							$().UItoTop({ easingType: 'easeOutQuart' });
-							
-						});
-					</script>
-				<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-
-
-</body>
+	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+	<script src="js/nem-sdk.js"></script>
+	<script src="js/script.js"></script>
 </html>
