just some format

--- a/static/account.html
+++ b/static/account.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Detail</title>
+<title>Account</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -81,25 +81,29 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<div class="account">
 		<h2>用户信息</h2>
-			<form>
-			<div>
-				<div><span>钱包地址</span></div>
-				<input type="text">
-			</div> 	
-			<div>			
-				<div><span class="name-in">姓  名</span></div>
-				<input type="text"> 
-			</div>			
-			<div>
-				<div><span class="mail">身份证号</span></div>
-				<input type="text"> 
-			</div>
-			<div> 
-				<div><span class="word">手机号</span></div>
-				<input type="password">
-			</div>				
-				<input type="submit" value="提交"> 
-			</form>
+				<div class=" col-md-9 contact-left">
+					    <form >
+					    	<div>
+								<span>钱包地址</span>
+								<input type="text">
+						    </div>
+						    <div>
+								<span>姓名</span>
+						    	<input name="userEmail" type="text" class="textbox">
+						    </div>
+						    <div>
+								<span>身份证号</span>
+						    	<input name="userEmail" type="text" class="textbox">
+						    </div>
+						    <div>
+						    	<span>手机号</span>
+						    	<input type="password">
+						    </div>
+						   <div>
+						   		<span><input type="submit" value="提交"></span>
+						  </div>
+					    </form>
+				  </div>
 		</div>
 	
 	</div>
