--- a/static/publish.html
+++ b/static/publish.html
@@ -101,11 +101,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						    	<textarea name="userMsg"> </textarea>
 						    </div>
 						   <div>
-						   		<span><input type="submit" value="Submit"></span>
+						   		<span><input type="submit" value="提交"></span>
 						  </div>
 					    </form>
 				  </div>
-
 				<div class=" col-md-3 contact-right">
 				    </div>
 					  <div class="clearfix"></div>
