--- a/static/detail.html
+++ b/static/detail.html
@@ -136,7 +136,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="form-group">
 				<fieldset>
-					<button class="btn btn-success" style="width:100%;" id="send">Send</button>
+					<button class="btn btn-success" style="width:100%;" id="send">预定</button>
 				</fieldset>
 			</div>
 		</div>
